--- a/mtest/mtest.qrc
+++ b/mtest/mtest.qrc
@@ -4,6 +4,9 @@
       <file alias="fonts/mscore/mscore.ttf">../fonts/mscore/mscore.ttf</file>
       <file alias="fonts/mscore/glyphnames.json">../fonts/mscore/glyphnames.json</file>
       <file alias="fonts/mscore/metadata.json">../fonts/mscore/metadata.json</file>
+      <file alias="fonts/gonville/Gonville.otf">../fonts/gonville/Gonville.otf</file>
+      <file alias="fonts/gonville/glyphnames.json">../fonts/gonville/glyphnames.json</file>
+      <file alias="fonts/gonville/metadata.json">../fonts/gonville/metadata.json</file>
       <file alias="fonts/bravura/Bravura.otf">../fonts/bravura/Bravura.otf</file>
       <file alias="fonts/bravura/glyphnames.json">../fonts/bravura/glyphnames.json</file>
       <file alias="fonts/bravura/metadata.json">../fonts/bravura/metadata.json</file>
@@ -15,6 +18,7 @@
       <file alias="fonts/mscoreTab.ttf">../fonts/mscoreTab.ttf</file>
       <file alias="fonts/fonts_figuredbass.xml">../fonts/fonts_figuredbass.xml</file>
       <file alias="fonts/mscore-BC.ttf">../fonts/mscore-BC.ttf</file>
+      <file alias="fonts/Gonville.otf">../fonts/gonville/Gonville.otf</file>
       <file alias="fonts/Bravura.otf">../fonts/bravura/Bravura.otf</file>
 
       <file alias="instruments.xml">../share/templates/instruments.xml</file>
