fix #23366: some more capitalization issues
Former-commit-id: 4ad440c822038c2b8e38fd8c7bb4005eff857097

--- a/mscore/lineproperties.ui
+++ b/mscore/lineproperties.ui
@@ -95,7 +95,7 @@
            </sizepolicy>
           </property>
           <property name="text">
-           <string>Symb.</string>
+           <string>Symbol</string>
           </property>
           <property name="autoExclusive">
            <bool>false</bool>
