--- a/mscore/selectinstr.ui
+++ b/mscore/selectinstr.ui
@@ -25,7 +25,7 @@
         </sizepolicy>
        </property>
        <property name="text">
-        <string>Current Instrument:</string>
+        <string>Current instrument:</string>
        </property>
       </widget>
      </item>
