--- a/mscore/lineproperties.ui
+++ b/mscore/lineproperties.ui
@@ -425,7 +425,7 @@
            </sizepolicy>
           </property>
           <property name="text">
-           <string>Symb.</string>
+           <string>Symbol</string>
           </property>
          </widget>
         </item>
