--- a/mscore/editstyle.ui
+++ b/mscore/editstyle.ui
@@ -577,6 +577,9 @@
             <property name="decimals">
              <number>1</number>
             </property>
+            <property name="minimum">
+             <double>-100.000000000000000</double>
+            </property>
             <property name="singleStep">
              <double>0.500000000000000</double>
             </property>
@@ -608,6 +611,9 @@
             </property>
             <property name="decimals">
              <number>1</number>
+            </property>
+            <property name="minimum">
+             <double>-100.000000000000000</double>
             </property>
             <property name="singleStep">
              <double>0.500000000000000</double>
