--- a/mscore/shortcutcapturedialog.ui
+++ b/mscore/shortcutcapturedialog.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Enter shortcut sequence</string>
+   <string>Enter Shortcut Sequence</string>
   </property>
   <property name="modal">
    <bool>true</bool>
@@ -35,7 +35,7 @@
    <item row="0" column="0" colspan="2">
     <widget class="QLabel" name="descrLabel">
      <property name="text">
-      <string>Press up to 4 keys to enter shortcut sequence!</string>
+      <string>Press up to four keys to enter shortcut sequence</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
