fix #23366: yet another capitalization fix
Former-commit-id: 67873d39cde48ed78b29dae2f769480cf636d3d0

--- a/mscore/editstringdata.ui
+++ b/mscore/editstringdata.ui
@@ -108,7 +108,7 @@
        <item>
         <widget class="QLabel" name="label_2">
          <property name="text">
-          <string>Number of Frets:</string>
+          <string>Number of frets:</string>
          </property>
         </widget>
        </item>
