fix warning reg. "name xxx already in use"
using the names they defaults to


Former-commit-id: 712a30d34fb3296bd149ee85439581a235c826b4

--- a/mscore/debugger/line.ui
+++ b/mscore/debugger/line.ui
@@ -24,7 +24,7 @@
      </property>
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
-       <layout class="QGridLayout" name="gridLayout">
+       <layout class="QGridLayout" name="gridLayout1">
         <item row="0" column="0">
          <widget class="QCheckBox" name="diagonal">
           <property name="text">
