--- a/mscore/instrdialog.ui
+++ b/mscore/instrdialog.ui
@@ -104,7 +104,7 @@
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="layoutWidget">
+     <widget class="QWidget" name="layoutWidget1">
       <layout class="QVBoxLayout" name="buttonList">
        <property name="spacing">
         <number>6</number>
