--- a/mscore/debugger/measure.ui
+++ b/mscore/debugger/measure.ui
@@ -330,7 +330,7 @@
        </layout>
       </item>
       <item>
-       <layout class="QGridLayout" name="gridLayout">
+       <layout class="QGridLayout" name="gridLayout1">
         <property name="leftMargin">
          <number>0</number>
         </property>
