--- a/mscore/prefsdialog.ui
+++ b/mscore/prefsdialog.ui
@@ -1584,7 +1584,7 @@
       <attribute name="title">
        <string>Score</string>
       </attribute>
-      <layout class="QGridLayout" name="gridLayout">
+      <layout class="QGridLayout" name="gridLayout6">
        <item row="1" column="0">
         <widget class="QGroupBox" name="groupBox_19">
          <property name="title">
