--- a/mscore/partedit.ui
+++ b/mscore/partedit.ui
@@ -16,7 +16,7 @@
    </sizepolicy>
   </property>
   <property name="windowTitle" >
-   <string>Form</string>
+   <string/>
   </property>
   <layout class="QVBoxLayout" >
    <property name="spacing" >
