fix #24497: labels align to wrong input region
Former-commit-id: 10c4eab7454b1abc8721b759ad47d70a4782f664

--- a/mscore/fretdprops.ui
+++ b/mscore/fretdprops.ui
@@ -30,6 +30,9 @@
          <property name="text">
           <string>Strings:</string>
          </property>
+         <property name="alignment">
+          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+         </property>
         </widget>
        </item>
        <item>
@@ -46,6 +49,9 @@
         <widget class="QLabel" name="label_2">
          <property name="text">
           <string>Frets:</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
          </property>
         </widget>
        </item>
