--- a/mscore/editstyle.ui
+++ b/mscore/editstyle.ui
@@ -4457,13 +4457,42 @@ p, li { white-space: pre-wrap; }
             </property>
             <layout class="QGridLayout" name="gridLayout_131">
              <item row="0" column="0">
+              <widget class="QLabel" name="label_602">
+               <property name="text">
+                <string>Distance staff to fretboard diagram:</string>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="1">
+              <widget class="QDoubleSpinBox" name="staffFretDist">
+               <property name="suffix">
+                <string>sp</string>
+               </property>
+               <property name="decimals">
+                <number>2</number>
+               </property>
+               <property name="minimum">
+                <double>0.000000000000000</double>
+               </property>
+               <property name="maximum">
+                <double>10.000000000000000</double>
+               </property>
+               <property name="singleStep">
+                <double>0.500000000000000</double>
+               </property>
+               <property name="value">
+                <double>2.000000000000000</double>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="0">
               <widget class="QLabel" name="label_601">
                <property name="text">
                 <string>Fret offset number size:</string>
                </property>
               </widget>
              </item>
-             <item row="0" column="1">
+             <item row="1" column="1">
               <widget class="QDoubleSpinBox" name="fretNumMag">
                <property name="suffix">
                 <string>%</string>
@@ -4485,7 +4514,7 @@ p, li { white-space: pre-wrap; }
                </property>
               </widget>
              </item>
-             <item row="0" column="2">
+             <item row="1" column="2">
               <widget class="QGroupBox" name="groupFONPos">
                <property name="title">
                 <string>Fret offset number postion:</string>
@@ -4508,7 +4537,7 @@ p, li { white-space: pre-wrap; }
                </layout>
               </widget>
              </item>
-             <item row="0" column="3">
+             <item row="1" column="3">
               <spacer name="horizontalSpacer_61">
                <property name="orientation">
                 <enum>Qt::Horizontal</enum>
