--- a/mscore/transposedialog.ui
+++ b/mscore/transposedialog.ui
@@ -73,32 +73,32 @@
               </property>
               <item>
                <property name="text">
-                <string>Cb major / Ab minor</string>
+                <string>C♭ major / A♭ minor</string>
                </property>
               </item>
               <item>
                <property name="text">
-                <string>Gb major / Eb minor</string>
+                <string>G♭ major / E♭ minor</string>
                </property>
               </item>
               <item>
                <property name="text">
-                <string>Db major / Bb minor</string>
+                <string>D♭ major / B♭ minor</string>
                </property>
               </item>
               <item>
                <property name="text">
-                <string>Ab major / F minor</string>
+                <string>A♭ major / F minor</string>
                </property>
               </item>
               <item>
                <property name="text">
-                <string>Eb major / C minor</string>
+                <string>E♭ major / C minor</string>
                </property>
               </item>
               <item>
                <property name="text">
-                <string>Bb major / G minor</string>
+                <string>B♭ major / G minor</string>
                </property>
               </item>
               <item>
@@ -123,27 +123,27 @@
               </item>
               <item>
                <property name="text">
-                <string>A major / F# minor</string>
+                <string>A major / F♯ minor</string>
                </property>
               </item>
               <item>
                <property name="text">
-                <string>E major / C# minor</string>
+                <string>E major / C♯ minor</string>
                </property>
               </item>
               <item>
                <property name="text">
-                <string>B major / G# minor</string>
+                <string>B major / G♯ minor</string>
                </property>
               </item>
               <item>
                <property name="text">
-                <string>F# major / D# minor</string>
+                <string>F♯ major / D♯ minor</string>
                </property>
               </item>
               <item>
                <property name="text">
-                <string>C# major / A# minor</string>
+                <string>C♯ major / A♯ minor</string>
                </property>
               </item>
              </widget>
